--- a/Application/Admin/View/Public/index.html
+++ b/Application/Admin/View/Public/index.html
@@ -93,7 +93,7 @@
                                         </tr>
                                         <tr>
                                             <td>官方网址</td>
-                                            <td><a href="#">http://www.qiluwan.com</a></td>
+                                            <td><a href="#">http://www.yiwanshu.com</a></td>
                                         </tr>
                                         <tr>
                                             <td>官方QQ群</td>
