--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -34,14 +34,14 @@
 .login_bg img {border: none;}
 /*LoginBox*/
 #loginBox{width:460px; height:290px;margin-top:-145px;margin-left:-230px;position:absolute;left:50%;top:50%;background-color:#fff;overflow:hidden; border:1px solid #dedede;}
-#loginBox h1{background:url(http://static.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) repeat-x; height:50px; line-height:50px; text-indent:20px;color:#676767; font-size:14px; font-weight:bold; border-bottom:1px solid #dedede;}
+#loginBox h1{background:url(http://www.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) repeat-x; height:50px; line-height:50px; text-indent:20px;color:#676767; font-size:14px; font-weight:bold; border-bottom:1px solid #dedede;}
 .LoginForm{padding:25px 0 0 40px;}
 .Logininput{margin-top:15px;height:42px;overflow:hidden;}
-.Logininput.iname{background:url(http://static.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -65px #fff no-repeat;}
-.Logininput.iname_{background:url(http://static.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -225px #fff no-repeat;}
-.Logininput.ipass{background:url(http://static.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -105px #fff no-repeat;}
-.Logininput.ipass_{background:url(http://static.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -265px #fff no-repeat;}
-.Logininput input{float:left;width:380px;height:40px;line-height:40px;border:1px solid #e8e8e8; background:url(http://static.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) no-repeat;text-indent:5px;}
+.Logininput.iname{background:url(http://www.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -65px #fff no-repeat;}
+.Logininput.iname_{background:url(http://www.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -225px #fff no-repeat;}
+.Logininput.ipass{background:url(http://www.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -105px #fff no-repeat;}
+.Logininput.ipass_{background:url(http://www.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) -190px -265px #fff no-repeat;}
+.Logininput input{float:left;width:380px;height:40px;line-height:40px;border:1px solid #e8e8e8; background:url(http://www.{:DOMAIN()}/Public/Admin/images/ui_ico.gif) no-repeat;text-indent:5px;}
 #uname{background-position:150px -150px;}
 #upass{background-position:150px -190px;}
 .Loginsubmit{width:136px;height:45px;border:none;margin-top:15px;cursor:pointer;}
@@ -99,7 +99,7 @@
    	<form id="form1" name="form1" method="post" action="{:U('Public/login')}" onSubmit="return CheckLogin()">
         <div id="iname" class="Logininput iname"><input name="username" type="text" id="uname" maxlength="20"/></div>
         <div id="ipass" class="Logininput ipass"><input name="password" type="password" id="upass" maxlength="20"/></div>
-        <div class="Loginsubmit"><input type="image" src="http://static.{:DOMAIN()}/Public/Admin/images/btn.gif"/></div>
+        <div class="Loginsubmit"><input type="image" src="http://www.{:DOMAIN()}/Public/Admin/images/btn.gif"/></div>
     </form>
     </div>
 </div>
