--- a/Application/Admin/View/Public/index.html
+++ b/Application/Admin/View/Public/index.html
@@ -22,12 +22,12 @@
                             <i class="icon-list-ul"></i> 关于我们
                         </div>
                         <div class="panel-body">
-<p>齐鲁玩网页游戏运营平台成立于2016年01月01日,隶属于山东雷云网络科技有限公司</p>
+<!--<p>一玩速网页游戏运营平台成立于2016年01月01日,隶属于山东雷云网络科技有限公司</p>-->
 <p>什么是目标?朝思暮想,做梦都想,时刻都想,而且一想就热血沸腾,那才叫目标</p>
 <p>什么是团队?一起经历风雨,跌宕起伏,浴血奋战,荣辱与共,艰难困境,依然迎难而上,创造奇迹,那才叫团队</p> 
 <p>什么是事业?一群志同道合的人一起干一件一生都干不完的有意义的事,顺便挣点一生都花不完的钱,那才叫事业</p> 
 <p>有目标的人在奔跑,没目标的人在流浪;有目标的人在感恩,没目标的人在抱怨;有目标的人睡不着;没目标的人睡不醒</p> 
-<p>我们的目标:磨剑三载,把齐鲁玩打造成为中国最知名的网页游戏平台</p>
+<p>我们的目标:磨剑三载,把一玩速打造成为中国最知名的网页游戏平台</p>
 <p>最后,这在祝愿大家工作愉快,身体健康,(By:江水)</p>         
                         </div>
                     </div>
